# data_in_wasm

./: Cargo.toml  data.json  index.html
src/: build.rs  data_included.rs  item.rs  lib.rs
