[package]
name = "wasmm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
js-sys = "0.3.63"
lazy_static = "1.4.0"
